# agentic-rag-evals

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/: README.md  fetch_corpus.py
data/corpus/: bm25.md  cosine-similarity.md  information-retrieval.md  ir-evaluation-measures.md  large-language-model.md  learning-to-rank.md  nearest-neighbor-search.md  precision-and-recall.md  question-answering.md  retrieval-augmented-generation.md  sentence-embedding.md  tf-idf.md  transformer.md  vector-space-model.md  word-embedding.md
evals/: __init__.py  golden.jsonl  judge.py  metrics.py  run_eval.py  thresholds.json
evals/fixtures/: cassettes.json
evals/reports/: latest.json
src/agentic_rag/: __init__.py  api.py  config.py  embeddings.py  graph.py  ingest.py  llm.py  nodes.py  prompts.py  retrieval.py  schemas.py  tracing.py  util.py
tests/: conftest.py  test_api.py  test_chunking.py  test_graph.py  test_llm.py  test_metrics.py  test_retrieval.py
